--- a/README.org
+++ b/README.org
@@ -1,4 +1,15 @@
-# #+HTML: <a href="http://travis-ci.org/bzg/jecode"><img src="https://api.travis-ci.org/bzg/jecode.png"/></a>
+#+HTML: <a href="http://travis-ci.org/bzg/jecode"><img src="https://api.travis-ci.org/bzg/jecode.png"/></a>
+
+* jecode.org
+
+Ce dépôt =git= contient l'application web qui est derrière le site
+http://jecode.org.
+
+* Contribuer
+
+Vous pouvez contribuer en ajoutant vos réponses dans le répertoire
+resources/public/md/ -- regardez les autres interviews pour voir la
+liste des questions.
 
 * License
 
