README.org: edit.

--- a/README.org
+++ b/README.org
@@ -5,12 +5,19 @@
 Ce dépôt =git= contient l'application web qui est derrière le site
 http://jecode.org.
 
-* Contribuer
+* Ajouter son interview
 
 Vous pouvez contribuer en ajoutant vos réponses dans le répertoire
-=resources/public/md/= -- voyez les autres interviews pour voir la
-liste des questions.
+=resources/public/md/= -- voyez les autres interviews pour la liste
+des quatre questions auxquelles vous devez répondre.
+
+Toutes les interviews sont la propriété de leurs auteurs.
+
+* Contribuer à la plate-forme
+
+Vous pouvez bien sûr nous envoyer des patches ou des pulls requests
+pour améliorer le code lui-même.
 
 * License
 
-[[http://en.wikipedia.org/wiki/Eclipse_Public_License][Eclispe Public License]]
+Le code est sous licence [[http://en.wikipedia.org/wiki/Eclipse_Public_License][Eclispe Public License]].
